--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "adb-port": "adb reverse tcp:8081 tcp:8081 && adb reverse tcp:9090 tcp:9090 && adb reverse tcp:8097 tcp:8097",
+    "android-run": "yarn adb-port && node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
